--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
-body{
+nav{
   min-width: 100% ;
-  min-height: 90%;
+  min-height: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
 }
-nav{
+form{
   display: flex;
   flex-direction: column;
   align-items: center;
